test: refactor integration tests to use isolated git workspaces and fixtures
Please make all the tests under ./integration-test create a dummy git repository with the gitInit function for use as workspace and use a fixture for the --base vm config if needed and for the --flake and --shell arguments. We don't want to be using this same repo as fixture. You probably need to change the withTestEnv function or add a new withGitWorkspaceTestEnv that calls withTestEnv and then sets up the workspace with gitInit. Add an utility function to create the --base, and --flake/--shell fixtures so that functionality is not repeated everywhere, try to be DRY

```git-revs
40ab3ac  (Base revision)
47fe0fe  Add new function exports to TestUtils module
2cd2ba9  Add imports for git and file operations
a1d99b0  Add System.Directory import
3255f9c  Add new functions implementations
b459a14  Snapshot before auto-cabal_build
dce964d  Add directory dependency to test-utils library
cb89156  Fix lens import
e1ae7df  Convert FilePath to Text for flake field
b0c5667  Update import to include withGitWorkspaceTestEnv
ce4a977  Replace withTestEnv with withGitWorkspaceTestEnv in spec
4679c16  Replace second withTestEnv with withGitWorkspaceTestEnv
5ad21e3  Remove duplicate gitInit call as it's now handled by withGitWorkspaceTestEnv
b2f699d  Remove unused imports
995a2e1  Update NixSpec to use withGitWorkspaceTestEnv
14a239f  Replace withTestEnv with withGitWorkspaceTestEnv in NixSpec
5fc7d7c  Update VMLifecycleSpec to use withGitWorkspaceTestEnv
5bb4b79  Replace withTestEnv with withGitWorkspaceTestEnv in VMLifecycleSpec
5b9fce5  Update ResetDestroySpec to use withGitWorkspaceTestEnv
aa519df  Replace withTestEnv with withGitWorkspaceTestEnv in ResetDestroySpec
8afd439  Update ShellEscapeKeySpec to use withGitWorkspaceTestEnv
a404d2c  Replace withTestEnv with withGitWorkspaceTestEnv in ShellEscapeKeySpec
27d209b  Refactor NixSpec to use around at test level
b405918  Refactor VMLifecycleSpec to use ar

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -81,6 +81,10 @@ library test-utils
                     , microlens
                     , generic-lens
                     , HUnit
+                    , directory
+                    , text
+                    , random
+                    , shelly
     hs-source-dirs:   test-utils
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
